# aithos-protocol

./: .dockerignore  .gitignore  ARCHITECTURE-DECISIONS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN-DATA-SPHERE.md  README.md  ROADMAP.md  SPEC.md  WHITEPAPER.md  package-lock.json  package.json
.github/workflows/: container-images.yml  deploy-pds.yml  publish-protocol-core.yml
cli/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
cli/src/: did.ts  ethos.ts  identity.ts  index.ts  lib.ts  mandate.ts
deploy/container/: CONTAINER-ACTIONS-GUIDE.md  DEMO-CAGE-GUIDE.md  README.md  REAL-MANDATE-GUIDE.md  TODO-cli-protocol-core.md  docker-compose.actions-dev.yml  docker-compose.demo-cage.yml  docker-compose.subscription-dev.yml  docker-compose.yml  entrypoint-runtime.sh  gateway.Dockerfile  package.json  registry.example.json  runtime-claude-code.Dockerfile
docs/internal/: DEPLOY-NOTES.md  DEPLOY-PDS-CD.md  HANDOFF-MCP-P0.md  PLAN-A2b-schema-self-registration.md  PLAN-MULTIENV-INFRA.md  PLAN-aithos-data-v0.1.md  README.md
examples/: README.md  action-email-reply.json  e2e-crud-no-gamma-read.sh  e2e-delegate-crud-encrypted.sh  e2e-gamma-access-control.sh  e2e-gamma-read-only-mandate.sh  e2e-multi-zone-mandate.sh  e2e-owner-crud.sh  e2e-public-read-mandate.sh  e2e-public-write-mandate.sh  e2e-read-only-mandate.sh  e2e-revoke-regrant.sh  e2e-write-only-mandate.sh  gamma-smoke-test.sh  mandate-circle-email.json  mandate-write-circle.json  revocation.json  smoke-test.sh
mcp/: README.md  package-lock.json  package.json
mcp/src/: auth.ts  server.ts
spec/: 00-introduction.md  01-identity.md  02-ethos.md  03-bundle.md  04-mandates.md  05-signing.md  06-transport.md  07-threat-model.md  08-glossary.md  09-local-store.md  10-gamma.md  10-platform-mcp-primitives.md  11-signed-requests.md  12-platform-mcp-converse.md
spec/assets/: 00-overview.md  01-data-model.md  02-key-hierarchy.md  03-asset-descriptors.md  04-mandates.md  05-api-primitives.md  06-pagination.md  07-portability.md  08-audit.md  09-threat-model.md  10-open-questions.md
spec/data/: 00-overview.md  01-data-model.md  02-key-hierarchy.md  (+8 more)
stubs/: PUBLISH.md
stubs/aithos-py/: CHANGELOG.md  README.md  pyproject.toml
stubs/aithos-py/birth/: birth.json  did.json
stubs/aithos-py/src/aithos/: __init__.py
stubs/aithos-rs/: CHANGELOG.md  Cargo.toml  README.md
stubs/aithos-rs/src/: lib.rs
(+75 files in other folders)
